<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="name_hint">Name</string>
    <string name="quantity">Quantity</string>
    <string name="order_summary">Order Summary</string>
    <string name="order">order</string>
    <string name="total">Total</string>
    <!-- char limit = 20 -->
    <string name="toppings">Toppings</string>
    <string name="topping1">Whipped cream</string>
    <string name="topping2">Chocolate</string>
    <string name="order_summary_name">Name: <xliff:g example="Amy" id="name">%s</xliff:g></string>
    <string name="order_summary_topping1">Add whipped cream?</string>
    <string name="order_summery_topping2">Add chocolate?</string>
    <string name="thank_you">Thank you!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="max_coffees_warning">Sorry, you can\'t order more than <xliff:g id="quantity">%d</xliff:g> coffees!</string>
    <string name="min_coffees_warning">Sorry, you can\'t order less than <xliff:g id="quantity">%d</xliff:g> coffees!</string>
</resources>
